--- a/examples/index.html
+++ b/examples/index.html
@@ -51,6 +51,7 @@
             	'insert': new MediumEditorInsert({
                     addons: {
                         images: {
+                            descriptionPlaceholder: 'Описание',
                             onInsertButtonClick: function(insertImage, insertLoader) {
                               uploadcare.openDialog(null, {
                                 publicKey: '737e97f64c1930ddf4fc',
