--- a/examples/index.html
+++ b/examples/index.html
@@ -54,7 +54,7 @@
                             descriptionPlaceholder: 'Описание',
                             onInsertButtonClick: function(insertImage, insertLoader) {
                               uploadcare.openDialog(null, {
-                                publicKey: '737e97f64c1930ddf4fc',
+                                publicKey: 'your_uploadcare_pub_key',
                                 imagesOnly: true,
                               }).done(function (file) {
                                   if (file) {
