fix inserting links

--- a/examples/index.html
+++ b/examples/index.html
@@ -68,7 +68,7 @@
                             }
                         },
                         embeds: {
-                            oembedProxy: '//iframe.ly/api/oembed?api_key=' + IFRAMELY_API_KEY
+                            oembedProxy: '//iframe.ly/api/oembed?iframe=1&lazy=1&api_key=' + IFRAMELY_API_KEY
                         }
                     }
                 })
