Working with chapters

--- a/examples/index.html
+++ b/examples/index.html
@@ -72,7 +72,7 @@
                         },
                         chapters: {
                           contentHTML: `
-                            <div></div>
+                            <div>Test content for widget</div>
                           `,
                         }
                     }
