--- a/examples/index.html
+++ b/examples/index.html
@@ -70,7 +70,7 @@
                         embeds: {
                             oembedProxy: '//iframe.ly/api/oembed?&api_key=' + IFRAMELY_API_KEY
                         },
-                        chapters: {
+                        html: {
                           contentHTML: `
                             <div>Test content for widget</div>
                           `,
